fix(Header): fix horizontal scrollbar appearing because of header width issue

--- a/frontend/src/ui/components/Header/Header.scss
+++ b/frontend/src/ui/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 header {
   justify-content: space-between;
+  width: calc(100dvw - 2rem);
   @include flex-center-y;
-  width: 100dvw;
   padding: 1rem;
 }
